회원가입 기능 구현 및 JWT 토큰 로직 구현중(검증필요)